--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -45,8 +45,8 @@
 @import url("fileinput.min.css");		/* css for fileinput.min.js plugin */
 
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700); /* google webfont */
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Roboto+Condensed:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700); /* google webfont */
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Roboto+Condensed:300,400,700);
 
 /* =============================================================== */
 /* FOUNDATION
@@ -4467,5 +4467,3 @@ nav.slider-nav a.next {
 .company-logo-thumb img {
   max-width: 100%;
 }
-
-
