--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,12 +3,77 @@
   <head>
     <meta charset="utf-8"></meta>
     <title>CollegeStuffSale</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png" />
+    <link rel="shortcut icon" href="assets/ico/favicon.png" />
+    <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet">
+    <link href="assets/css/owl.theme.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="header">
+        <nav class="navbar navbar-site navbar-default" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
+                <span class="sr-only">Toggle navigation</span> <span class="icon-bar" />
+                <span class="icon-bar" /> <span class="icon-bar" />
+              </button>
+              <a href="/" class="navbar-brand logo logo-title">
+                <span class="logo-icon">
+                  <i class="icon icon-search-1 ln-shadow-logo shape-0">
+                  </i>
+                </span> College<span>StuffSale</span>
+              </a>
+            </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="/login">Login</a></li>
+                <li><a href="/signup">Signup</a></li>
+                <li class="postadd">
+                  <a class="btn btn-block btn-border btn-post btn-danger" href="/posts/new">Post New Item</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    </div>
     <div id = "app">
     </div>
-    <script src = "../assets/js/bundle.js">
-    </script>
+    <div class="footer" id="footer">
+        <div class="container">
+          <ul class=" pull-left navbar-link footer-nav">
+            <li>
+              <a href="/">
+                Home
+              </a>
+              <a href="/aboutus">
+                About us
+              </a>
+              <a href="/terms">
+                Terms and Conditions
+              </a>
+              <a href="/privacy">
+                Privacy Policy
+              </a>
+              <a href="/contact">
+                Contact us
+              </a>
+              <a href="/faq">
+                FAQ
+              </a>
+            </li>
+          </ul>
+          <ul class=" pull-right navbar-link footer-nav">
+            <li> © 2016 CollegeStuffSale</li>
+          </ul>
+        </div>
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
@@ -26,5 +91,7 @@
     <script src="assets/plugins/jquery.fs.selecter/jquery.fs.selecter.js"></script>
     <!-- include custom script for site  -->
     <script src="assets/js/script.js"></script>
+    <script src = "assets/js/bundle.js">
+    </script>
   </body>
 </html>
