--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -20,8 +20,7 @@
           <div class="container">
             <div class="navbar-header">
               <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
-                <span class="sr-only">Toggle navigation</span> <span class="icon-bar" />
-                <span class="icon-bar" /> <span class="icon-bar" />
+                <span class="sr-only">Toggle navigation</span> <span class="icon-bar" /><span class="icon-bar" /><span class="icon-bar"/>
               </button>
               <a href="/" class="navbar-brand logo logo-title">
                 <span class="logo-icon">
@@ -32,10 +31,10 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="/login">Login</a></li>
-                <li><a href="/signup">Signup</a></li>
+                <li><a href="/signin">Sign In</a></li>
+                <li><a href="/signup">Sign Up</a></li>
                 <li class="postadd">
-                  <a class="btn btn-block btn-border btn-post btn-danger" href="/posts/new">Post New Item</a>
+                  <a class="btn btn-block btn-border btn-post btn-danger" href="/new-post">Post New Item</a>
                 </li>
               </ul>
             </div>
@@ -73,6 +72,22 @@
           </ul>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- include jquery file upload plugin  -->
+    <script src="assets/js/fileinput.min.js" type="text/javascript"></script>
+    <script>
+        // initialize with defaults
+        $("#input-upload-img1").fileinput();
+        $("#input-upload-img2").fileinput();
+        $("#input-upload-img3").fileinput();
+        $("#input-upload-img4").fileinput();
+        $("#input-upload-img5").fileinput();
+
+
+    </script>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
