--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"></meta>
     <title>CollegeStuffSale</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png" />
+  -->
     <link rel="shortcut icon" href="assets/ico/favicon.png" />
     <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
+    <!--
     <link href="assets/css/owl.carousel.css" rel="stylesheet">
     <link href="assets/css/owl.theme.css" rel="stylesheet" />
+  -->
   </head>
   <body>
     <div class="header">
@@ -20,7 +23,7 @@
           <div class="container">
             <div class="navbar-header">
               <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
-                <span class="sr-only">Toggle navigation</span> <span class="icon-bar" /><span class="icon-bar" /><span class="icon-bar"/>
+                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
               </button>
               <a href="/" class="navbar-brand logo logo-title">
                 <span class="logo-icon">
@@ -91,21 +94,23 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <!--
 
-    <!-- include carousel slider plugin  -->
+
     <script src="assets/js/owl.carousel.min.js"></script>
 
-    <!-- include equal height plugin  -->
+
     <script src="assets/js/jquery.matchHeight-min.js"></script>
 
-    <!-- include jquery list shorting plugin plugin  -->
+
     <script src="assets/js/hideMaxListItem.js"></script>
 
-    <!-- include jquery.fs plugin for custom scroller and selecter  -->
+
     <script src="assets/plugins/jquery.fs.scroller/jquery.fs.scroller.js"></script>
     <script src="assets/plugins/jquery.fs.selecter/jquery.fs.selecter.js"></script>
-    <!-- include custom script for site  -->
+
     <script src="assets/js/script.js"></script>
+    -->
     <script src = "assets/js/bundle.js">
     </script>
   </body>
