--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -45,6 +45,7 @@
         </nav>
     </div>
     <div id = "app">
+      {user}
     </div>
     <div class="footer" id="footer">
         <div class="container">
