make more change to new-post, and make signup button not work when term is not checked

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -45,7 +45,7 @@
         </nav>
     </div>
     <div id = "app">
-      {user}
+      <%- user %>
     </div>
     <div class="footer" id="footer">
         <div class="container">
